--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,13 +9,15 @@ spring:
       ddl-auto: update
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL5Dialect
+        #dialect: org.hibernate.dialect.MySQL5Dialect
+        dialect: org.hibernate.dialect.PostgreSQLDialect
         show_sql: true
         use_sql_comments: true
         format_sql: true
         type: trace
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/desafio-hotel?useTimezone=true&serverTimezone=UTC
+    #driver-class-name: com.mysql.cj.jdbc.Driver
+    url: ${JDBC_DATASOURCE_URL}
+    # url: jdbc:mysql://localhost:3306/desafio-hotel?useTimezone=true&serverTimezone=UTC
     username: root
     password: root
