--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,6 @@ spring:
   datasource:
     #driver-class-name: com.mysql.cj.jdbc.Driver
     url: ${JDBC_DATASOURCE_URL}
-    # url: jdbc:mysql://localhost:3306/desafio-hotel?useTimezone=true&serverTimezone=UTC
-    username: root
-    password: root
+    #url: jdbc:mysql://localhost:3306/desafio-hotel?useTimezone=true&serverTimezone=UTC
+#    username: root
+#    password: root
