--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,18 +6,16 @@ server:
 spring:
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
-        #dialect: org.hibernate.dialect.MySQL5Dialect
         dialect: org.hibernate.dialect.PostgreSQLDialect
-        show_sql: false
+        show_sql: true
         use_sql_comments: true
         format_sql: true
         type: trace
   datasource:
-    #driver-class-name: com.mysql.cj.jdbc.Driver
-    url: ${DATABASE_URL}
-    #url: jdbc:mysql://localhost:3306/desafio-hotel?useTimezone=true&serverTimezone=UTC
-#    username: root
-#    password: root
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/desafiohotel
+    username: postgres
+    password: root
