--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,6 @@ spring:
         type: trace
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: ${DATABASE_URL}
-#    username: postgres
-#    password: root
+    url: jdbc:postgresql://localhost:5432/desafiohotel
+    username: postgres
+    password: root
